More javadocs descriptions and updated readme once more